@@ -1,3 +1,8 @@
+July 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * libpcsxcore/psxbios.c: Use s32 instead of long in DIRENTRY struct for
+   compatibility with x86_64.
+
 June 30, 2009 Peter Collingbourne <peter@pcc.me.uk>
 
  * libpcsxcore/psxbios.c: Implemented psxBios_rename(). Interpret a file
